--- a/animus.html
+++ b/animus.html
@@ -45,30 +45,30 @@
     <div class="row text-white mt-5">
       <div class="col-12 text-center">
         <div class="fs-1c mt-lg-0 my-3">
-          Deposito Cinerario Italiano </div>
-          <iframe class="video_works" src="https://www.youtube.com/embed/hPfoiQ4gTKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          Polimi app redesign + Animus </div>
+          <iframe class="video_works" src="https://www.youtube.com/embed/QzzEP6UQfQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="row text-white mt-5  padding-row">
       <div class="col-md-6 col-12 px-3">
         <div class="fs-3c mt-4" >
-          Communicative machine <br> speculating on death </div>
+          A new smart way <br>of managing university rooms </div>
       </div>
       <div class="col-md-3 col-6 px-md-3">
         <div  class="mt-4 pt-2 fs-6c">
             My main role: </div>
           <div  class="fs-6c  mt-2 fw-lighter opacity" >
             UI / UX  designer<br>
-            Front-end developer
+            User researcher
           </div>
       </div>
       <div class="col-md-3 col-6 px-md-3">
         <div  class="mt-4 pt-2 fs-6c">
             My secondary role: </div>
           <div  class="fs-6c  mt-2 fw-lighter opacity" >
-            Visual designer<br>
-            Space designer
+            Prototype creator<br>
+            C++ programmer
           </div>
       </div>
     </div>
@@ -77,27 +77,31 @@
     <div class="row text-white mt-5 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-2c mt-4" >
-          How to create a debate? </div>
+          How to improve the everyday lives <br> of students at Politecnico di Milano? </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          In Italy there are some laws that limit the disposition of the body after death, according to the dominant religious tradition.
-          Religions other than Catholicism are excluded. <br> We used the Speculative Design process to make people feel what it means to have no choice in death. </div>
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            The university where I studied, Politecnico di Milano, has an application that gives students the ability to manage and perform various functions. Unfortunately, the app is unintuitive and difficult to use.
+          </span>
+          </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
 
-        We create a scenario where people are obliged to be cremated and where all the ashes are placed in a single urn iside the “Deposito Cinerario Italiano” (“Italian Cinerary Depot”).
-        <br> The user is pushed to act as an agent for collective burial, where all deceased are equals and indistinct. </div>
+      <span class="opacity  fw-lighter">
+        After analysing the current app and testing the students, we realised that students have great </span>difficulty in finding suitable classrooms on a daily basis. <span class="opacity  fw-lighter">For this reason we decided to analyse this problem as well and we are very satisfied with the result.
+        </span>
+      </div>
       </div>
     </div>
 
     <div class="row text-white mt-5 padding-row">
       <div class="col-lg-6 col-12">
-        <img src="images/deposito.png" class="works_img">
+        <img src="images/animus.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12 mt-3 mt-lg-0">
-        <img src="images/deposito1.png" class="works_img">
+        <img src="images/animus2.png" class="works_img">
       </div>
     </div>
 
@@ -106,19 +110,20 @@
     <div class="row text-white mt-5 pt-4 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          1. Research and concept definition </div>
+          1. Expert evaluation </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          It’s not easy to make people think about death,
-        so we made a lot of research about Speculative Design and on
-        how to involve user’s emotions.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            The first phase was the Expert Evaluation, which aimed to define the main usability issues related to the architecture or to the UI.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          At the end we decided to create a
-          distopian world where users is a main part of the project.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+           <span class="opacity fw-lighter ">
+             Using the Heuristic evaluation strategy, we found that the</span> flows are intricate <span class="opacity  fw-lighter">and follow a horizontal development, making the user feel lost while navigating the features.
+             </span>
         </div>
     </div>
     </div>
@@ -127,19 +132,20 @@
     <div class="row text-white mt-5 pt-0 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          2. The limits of the project </div>
+          2. User testing </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          The idea was to create a big cinerary urn,
-        but we had the space limit of one square meter, so we
-        designed a space where the user doesn’t have to move, he
-        should only interact with a tablet and a touch screen on a small table.
-        From that position the user can easily watch the urn.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            To confirm the Heuristic Evaluation, find new insights and understand user mental models, we decided to conduct a questionnaire and structured interviews.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-md-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            For the test we have decided to use some tools that could give us some more insights, like the</span>  ECG<span class="opacity  fw-lighter"> and a custom developed software able to understand the user’s emotions through his facial micro-movements.
+            </span>
         </div>
     </div>
     </div>
@@ -147,10 +153,10 @@
 <!-- img -->
     <div class="row text-white mt-5 pt-5 padding-row">
       <div class="col-lg-6 col-12">
-        <img src="images/deposito3.png" class="works_img">
+        <img src="images/animus4.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12  mt-3 mt-lg-0">
-        <img src="images/deposito4.png" class="works_img">
+        <img src="images/animus3.png" class="works_img">
       </div>
     </div>
 
@@ -158,19 +164,25 @@
     <div class="row text-white mt-5 pt-4 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          3. Create and test prototypes</div>
+          3. Define the concept</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          We created physical prototypes to test the space and the elements dimension.
-        We also realized different digital prototypes to test the user interaction
-        with the digital intarface.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            The redesign phase started with the concept definition according to the outcomes of the analysis and the requirements of the users.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The goal was to create an interface that was easy
-          for everyone to use, people from every culture and age.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+        <span class="opacity fw-lighter ">
+            We based our UX concept on three main pillars: <br></span>
+          <ol>
+          <li> Customization</li>
+          <li> Speed </li>
+          <li>  Hierarchy </li>
+          </ol>
+
         </div>
     </div>
     </div>
@@ -179,11 +191,13 @@
     <div class="row text-white mt-5 pt-0 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          4. Build the final project </div>
+          4. Define and test the app architecture </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          Thanks to wood, steel, electrical and mechanical components and thanks to a lot of error, we finally created the final project.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            Through several preliminary tests (Card sorting and Tree testing) we have defined our App Architecture, so we could realize a wireframe that we have improved thanks to other tests on users.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
@@ -192,45 +206,71 @@
     </div>
     </div>
 
+    <!-- img -->
+        <div class="row text-white mt-5 pt-5 padding-row d-flex justify-content-center">
+          <div class="col-lg-7 col-12">
+            <img src="images/animus5.png" class="works_img">
+          </div>
+        </div>
+
 <!-- img -->
-    <div class="row text-white mt-5 pt-5 padding-row">
+    <div class="row text-white  mt-lg-4 mt-3 padding-row">
       <div class="col-lg-6 col-12">
-        <img src="images/deposito6.png" class="works_img">
+        <img src="images/animus6.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12  mt-3 mt-lg-0">
-        <img src="images/deposito7.png" class="works_img">
+        <img src="images/animus7.png" class="works_img">
       </div>
     </div>
 
-<!-- img -->
-    <div class="row text-white mt-lg-4 mt-3 padding-row">
-      <div class="col-lg-9 col-12">
-        <img src="images/deposito9.png" class="works_img">
+
+
+<!-- 5 -->
+    <div class="row text-white mt-5 pt-4 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-3c mt-4" >
+          5. Define the UI</div>
       </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-4 pt-2 fs-6c ">
+        <span class="opacity fw-lighter ">
+          Now we just need to define the UI: after a few iterations, we arrived at the final solution. It </span>reflects the university's institutional identity<span class="opacity fw-lighter "> but using a fresher and more modern aesthetic.
+          </span>
+
+      </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+    <span class="opacity fw-lighter ">
+      After defining the UI of the app it was easy for us to define the various elements of Animus, to learn more about this part of the project watch the video above!
+      </span>
+        </div>
+    </div>
     </div>
 
 <!-- 5 -->
     <div class="row text-white mt-5 pt-4 padding-row mb-5 pb-5">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          5. Show it to everyone!</div>
+          6. Prototype it and test it!</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        Unfortunately, due to 2020 Corona Virus pandemic, we were unable to
-        do the exhibition, but we tested it to our collegues and teacher.
-        The impact was effective, everyone was impressed by our job.
-
+        <div  class="mt-4 pt-2 fs-6c ">
+        <span class="opacity fw-lighter ">
+          We finally have the final result! The UI has been then prototyped in ProtoPie to make it feel as real as possible with animated interaction and functioning variables.
+          </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The project was also mentioned as a case study in an
-          <a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/">article of SpeculativeEdu</a>.
-           In the future we hope to show the project in the exhibition.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            We tested it with our users and they shared with us amazing comments. They were pleased by the fresh look and the intuitiveness of it! </span>
+            <a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://www.figma.com/proto/dTuNtFYwQPcP2utRPuM8CC/App-Architecture?page-id=483%3A9821&node-id=545%3A1080&viewport=241%2C48%2C0.24&scaling=scale-down&starting-point-node-id=742%3A11984">Try it here </a><span class="opacity fw-lighter ">yourself and let me know what you think!
+            </span>
         </div>
     </div>
     </div>
+
 
 
     <!-- other projects -->
@@ -263,7 +303,7 @@
     <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
 
     <!-- animus -->
-    <div class="row text-white py-4 padding-row work" id="animus" onclick="changePage(this)">
+    <div class="row text-white py-4 padding-row work d-none" id="animus" onclick="changePage(this)">
       <div class="col-lg-6 col-12">
         <div class="fs-3c" >
         PoliMi app redesign + Animus </div>
@@ -280,10 +320,10 @@
     </div>
     </div>
 
-    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+    <hr class="bg-white my-0 d-none" style="opacity:1; height:1.5px"/>
 
     <!-- deposito -->
-    <div class="row text-white py-4 padding-row work d-none" id="deposito" onclick="changePage(this)">
+    <div class="row text-white py-4 padding-row work" id="deposito" onclick="changePage(this)">
       <div class="col-lg-6 col-12">
         <div class="fs-3c" >
         Deposito Cinerario Italiano </div>
@@ -300,7 +340,7 @@
     </div>
     </div>
 
-    <hr class="bg-white my-0 d-none" style="opacity:1; height:1.5px"/>
+    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
 
     <!-- izi -->
     <div class="row text-white py-4 padding-row work" id="izi" onclick="changePage(this)">
