--- a/easydream.html
+++ b/easydream.html
@@ -45,30 +45,31 @@
     <div class="row text-white mt-5">
       <div class="col-12 text-center">
         <div class="fs-1c mt-lg-0 my-3">
-          Deposito Cinerario Italiano </div>
-          <iframe class="video_works" src="https://www.youtube.com/embed/hPfoiQ4gTKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          easyDream </div>
+          <iframe class="video_works" src="https://www.youtube.com/embed/SOPcGmyXbgw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="row text-white mt-5  padding-row">
       <div class="col-md-6 col-12 px-3">
         <div class="fs-3c mt-4" >
-          Communicative machine <br> speculating on death </div>
+          A new way to inspire people <br> to choose their next travel destination </div>
+          <div  class="mt-2 fs-6c fw-lighter opacity">
+            Winner project of Reply Creative Challenge 2021 </div>
       </div>
       <div class="col-md-3 col-6 px-md-3">
         <div  class="mt-4 pt-2 fs-6c">
             My main role: </div>
           <div  class="fs-6c  mt-2 fw-lighter opacity" >
             UI / UX  designer<br>
-            Front-end developer
+            User researcher
           </div>
       </div>
       <div class="col-md-3 col-6 px-md-3">
         <div  class="mt-4 pt-2 fs-6c">
             My secondary role: </div>
           <div  class="fs-6c  mt-2 fw-lighter opacity" >
-            Visual designer<br>
-            Space designer
+            Digital prototype creator
           </div>
       </div>
     </div>
@@ -77,27 +78,24 @@
     <div class="row text-white mt-5 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-2c mt-4" >
-          How to create a debate? </div>
+          How to inspire people <br> for their next destinations? </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          In Italy there are some laws that limit the disposition of the body after death, according to the dominant religious tradition.
-          Religions other than Catholicism are excluded. <br> We used the Speculative Design process to make people feel what it means to have no choice in death. </div>
+        <div  class="mt-4 pt-2 fs-6c ">
+        <span class="opacity fw-lighter ">Everyone at least once in their life has struggled with choosing his next travel destination, never finding a better place to go on holiday and getting very frustrated by it, so easyJet, through the </span>Reply Creative Challenge 2021 <span  class="opacity fw-lighter ">, asked us to answer to this question: How to inspire people for their next destinations? </span></div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-
-        We create a scenario where people are obliged to be cremated and where all the ashes are placed in a single urn iside the “Deposito Cinerario Italiano” (“Italian Cinerary Depot”).
-        <br> The user is pushed to act as an agent for collective burial, where all deceased are equals and indistinct. </div>
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
+<span class="opacity fw-lighter ">After accepting this challenge, we conducted a research discovering that what really drives people is not a destination but the </span>experience that a place can give them<span  class="opacity fw-lighter ">. So we asked ourselves, if people seek for emotions, what if they could find inspiration from them? From this, in just 2 days, easyDream was born.</span></div>
       </div>
     </div>
 
     <div class="row text-white mt-5 padding-row">
       <div class="col-lg-6 col-12">
-        <img src="images/deposito.png" class="works_img">
+        <img src="images/easydream.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12 mt-3 mt-lg-0">
-        <img src="images/deposito1.png" class="works_img">
+        <img src="images/easydream2.png" class="works_img">
       </div>
     </div>
 
@@ -106,19 +104,19 @@
     <div class="row text-white mt-5 pt-4 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          1. Research and concept definition </div>
+          1. Benchmarking and questionnaire </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          It’s not easy to make people think about death,
-        so we made a lot of research about Speculative Design and on
-        how to involve user’s emotions.
+          <span class="opacity fw-lighter ">The preliminary research has been divided into two activities: benchmarking of existing solutions and a questionnaire shared with a good breadth of users.
+          </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          At the end we decided to create a
-          distopian world where users is a main part of the project.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
+           <span class="opacity fw-lighter ">
+             After that we defined our personas, finding out the starting point for our concept: </span>“People look for experiences, not destinations!”
+
         </div>
     </div>
     </div>
@@ -127,19 +125,20 @@
     <div class="row text-white mt-5 pt-0 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          2. The limits of the project </div>
+          2. Define the concept </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          The idea was to create a big cinerary urn,
-        but we had the space limit of one square meter, so we
-        designed a space where the user doesn’t have to move, he
-        should only interact with a tablet and a touch screen on a small table.
-        From that position the user can easily watch the urn.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            Our concept mainly wants to consider the kind of experience the user expects, presenting moods, activities and travel plans, instead of just sterile destinations, flights and packages.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-md-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            What the user (and his friends or family) will have to do is just to </span>like or dislike those moods   <span class="opacity fw-lighter ">from the easyDream Mobile application or website. Thanks to AI the service will find the perfect solution for the user.
+            </span>
         </div>
     </div>
     </div>
@@ -147,10 +146,10 @@
 <!-- img -->
     <div class="row text-white mt-5 pt-5 padding-row">
       <div class="col-lg-6 col-12">
-        <img src="images/deposito3.png" class="works_img">
+        <img src="images/easydream3.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12  mt-3 mt-lg-0">
-        <img src="images/deposito4.png" class="works_img">
+        <img src="images/easydream4.png" class="works_img">
       </div>
     </div>
 
@@ -158,79 +157,44 @@
     <div class="row text-white mt-5 pt-4 padding-row">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          3. Create and test prototypes</div>
+          3. Prototype</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          We created physical prototypes to test the space and the elements dimension.
-        We also realized different digital prototypes to test the user interaction
-        with the digital intarface.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            The main goal of easyDream is to give the possibility to each single user to easily book the destination of his dreams. For this reason we built the app architecture in such a way as to allow the user to  </span>reach their goals in a few taps.
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The goal was to create an interface that was easy
-          for everyone to use, people from every culture and age.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+          <span class="opacity fw-lighter ">Then we prototype our idea using Figma and ProtoPie.</span>
         </div>
     </div>
     </div>
 
 <!-- 4 -->
-    <div class="row text-white mt-5 pt-0 padding-row">
+    <div class="row text-white mt-5 pt-0 padding-row mb-5 pt-5">
       <div class="col-lg-6 col-12">
         <div class="fs-3c mt-4" >
-          4. Build the final project </div>
+          4. Presentation of the project and… win! </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          Thanks to wood, steel, electrical and mechanical components and thanks to a lot of error, we finally created the final project.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            Among 170 teams around the world, </span> easyJet chose our project<span class="opacity fw-lighter "> to participate in the Reply Creative Challenge 2021 final, presenting our project in a <a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://www.youtube.com/watch?v=TGMFqtj5s5M">live YouTube broadcast</a>, competing against 9 other teams.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-md-2 fs-6c ">
+          <span class="opacity fw-lighter ">
+            The jury chose our project as the winner and we had the opportunity to meet the managers of easyJet's UX-UI department... Now we are waiting and hoping that the company will implement easyDream!
+            <br>Find out more about the project and </span><a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://watermelon-team.github.io/easydream/">try the prototype here!</a>
+
         </div>
     </div>
     </div>
 
-<!-- img -->
-    <div class="row text-white mt-5 pt-5 padding-row">
-      <div class="col-lg-6 col-12">
-        <img src="images/deposito6.png" class="works_img">
-      </div>
-      <div class="col-lg-6 col-12  mt-3 mt-lg-0">
-        <img src="images/deposito7.png" class="works_img">
-      </div>
-    </div>
-
-<!-- img -->
-    <div class="row text-white mt-lg-4 mt-3 padding-row">
-      <div class="col-lg-9 col-12">
-        <img src="images/deposito9.png" class="works_img">
-      </div>
-    </div>
-
-<!-- 5 -->
-    <div class="row text-white mt-5 pt-4 padding-row mb-5 pb-5">
-      <div class="col-lg-6 col-12">
-        <div class="fs-3c mt-4" >
-          5. Show it to everyone!</div>
-      </div>
-      <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        Unfortunately, due to 2020 Corona Virus pandemic, we were unable to
-        do the exhibition, but we tested it to our collegues and teacher.
-        The impact was effective, everyone was impressed by our job.
-
-      </div>
-      </div>
-      <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The project was also mentioned as a case study in an
-          <a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/">article of SpeculativeEdu</a>.
-           In the future we hope to show the project in the exhibition.
-        </div>
-    </div>
-    </div>
 
 
     <!-- other projects -->
@@ -244,7 +208,7 @@
     <hr class="bg-white mb-0 mt-lg-5 mt-3" style="opacity:1; height:1.5px"/>
 
     <!-- easydream -->
-    <div class="row text-white py-4 padding-row work" id="easydream" onclick="changePage(this)">
+    <div class="row text-white py-4 padding-row work d-none" id="easydream" onclick="changePage(this)">
       <div class="col-lg-6 col-12">
         <div class="fs-3c" >
         Easydream </div>
@@ -260,7 +224,7 @@
     </div>
     </div>
 
-    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+    <hr class="bg-white my-0 d-none" style="opacity:1; height:1.5px"/>
 
     <!-- animus -->
     <div class="row text-white py-4 padding-row work" id="animus" onclick="changePage(this)">
@@ -283,7 +247,7 @@
     <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
 
     <!-- deposito -->
-    <div class="row text-white py-4 padding-row work d-none" id="deposito" onclick="changePage(this)">
+    <div class="row text-white py-4 padding-row work" id="deposito" onclick="changePage(this)">
       <div class="col-lg-6 col-12">
         <div class="fs-3c" >
         Deposito Cinerario Italiano </div>
@@ -300,7 +264,7 @@
     </div>
     </div>
 
-    <hr class="bg-white my-0 d-none" style="opacity:1; height:1.5px"/>
+    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
 
     <!-- izi -->
     <div class="row text-white py-4 padding-row work" id="izi" onclick="changePage(this)">
