--- a/index.html
+++ b/index.html
@@ -4,57 +4,57 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="sketch_home.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="home.css" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <link href="style_custom.css" rel="stylesheet">
+      <script src="p5.min.js"></script>
+      <script src="p5.sound.min.js"></script>
+      <script src="sketch_home.js"></script>
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
     <meta name="keywords" content="Elisa Manzoni, portfolio" title="Manzoni Elisa">
 
   </head>
   <body>
-<div id="header" class="header">
-  <a href="about.html" id="about" class="header_name">ABOUT</a>
-  <a href="works.html" id="works" class="header_name">WORKS</a>
-  <a id="contact" class="header_name">CONTACT</a>
-  <a href="index.html" id="home" class="header_name">ME</a>
-  <div id="line_header" class="line line_header"></div>
-</div>
+    <!-- navbar -->
+    <div class="row navbar_size mx-0 pt-2 pb-2  padding-row">
+      <div class="col d-flex align-items-end ">
+        <a class="ME" href="index.html"></a>
+      </div>
+      <div class="col text-end fs-6c d-flex align-items-end justify-content-end ">
+        <a href="about.html" class=" mx-md-3 mx-2 hover_bg_green">About</a>
+        <a href="works.html" class=" mx-md-3 mx-2 hover_bg_green">Works</a>
+        <a class=" mx-md-3 mx-2 hover_bg_green" id="contact">Contact</a>
+      </div>
+    </div>
 
-<div id="contact_container" class="contact_container_sparito display_none">
-  <div class="exit" id="exit"></div>
-  <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
-  <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-  <a  class="contact_popup" target="_blank" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a><br>
-  <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
-</div>
+<!-- contact -->
+    <div id="contact_container" class="contact_container_sparito display_none">
+      <div class="exit" id="exit"></div>
+      <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
+      <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
+      <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
+    </div>
 
-<div id="body" class="body">
-    <div id="home_description" class="home_description">
-    <!-- ITALIANO -->
-      <!-- Sono <a class="elisa_manzoni"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
-      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>. -->
-
-    <!-- INGLESE -->
-      This is <a class="ME"></a><a class="elisa_manzoni"> <br>(Elisa Manzoni)</a>, <br>
+<!-- intro -->
+<div class="position-absolute">
+    <div class="row mt-lg-4 mt-2 fs-1c  padding-row">
+      <div class="col-12  mt-lg-5 mt-4">
+      This is <span class="ME_intro"></span><span class="d-inline d-md-none text-main"> <br>(Manzoni Elisa)</span>, <br>
       an Interaction designer <br> who loves play with code.
+      </div>
+      <div class="col-12 mt-4">
+        <a href = "works.html" class="hover_green text-decoration-underline"> Have fun watching my works
+          <img src="images/arrow_right.png" class="arrow_right arrow_right1">
+        </a>
+      </div>
     </div>
-
-    <div id="link_scopri" class="home_description link_scopri">
-    <!-- ITALIANO -->
-      <!-- <a href = "works.html"> <div id="link_progetti" class="link_progetti">Scopri i miei progetti<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
-      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contattami<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a> -->
-
-    <!-- INGLESE -->
-      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Have fun watching my works<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
     </div>
-</div>
 
 
   </body>
-</html>
+
+
+
+  </html>
