--- a/izi.html
+++ b/izi.html
@@ -1,139 +1,328 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="izi.css" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <link href="style_custom.css" rel="stylesheet">
+      <script src="p5.min.js"></script>
+      <script src="p5.sound.min.js"></script>
+      <script src="sketch.js"></script>
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
     <meta name="keywords" content="Elisa Manzoni, portfolio" title="Manzoni Elisa">
-</head>
 
-<body>
-  <div id="header" class="header">
-    <a href="about.html" id="about" class="header_name">ABOUT</a>
-    <a href="works.html" id="works" class="header_name">WORKS</a>
-    <a id="contact" class="header_name">CONTACT</a>
-    <a href="index.html" id="home" class="header_name">ME</a>
-    <div id="line_header" class="line line_header"></div>
-  </div>
+  </head>
+  <body class="bg-black">
 
-  <div id="contact_container" class="contact_container_sparito display_none">
-    <div class="exit" id="exit"></div>
-    <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
-    <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-    <a  class="contact_popup" target="_blank" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a><br>
-    <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
-  </div>
+    <!-- navbar -->
+    <div class="row navbar_size mx-0 pt-2 pb-2 text-white position-fixed w-100 bg-black padding-row" style="border-color:white!important; z-index:5">
+      <div class="col d-flex align-items-end">
+        <a class="ME text-white" href="index.html"></a>
+      </div>
+      <div class="col text-end fs-6c d-flex align-items-end justify-content-end ">
+        <a href="about.html" class=" mx-md-3 mx-2 hover_bg_green text-white">About</a>
+        <a href="works.html" class=" mx-md-3 mx-2 hover_bg_green  text-white">Works</a>
+        <a class=" mx-md-3 mx-2 hover_bg_green  text-white" id="contact">Contact</a>
+      </div>
+    </div>
 
-<div id="body">
-  <div id="container" class="false_container container"></div>
-    <div id="main-description" class="container">
-      <div id="main-description-1" class='container-small'>
-        <div class='title'><a class='color'> Izi photo mosaic</a></div>
-        Every day milion of people surf on the net.
-        The goal of this web experience is to make more people collaborate in a productive way. <br>
-        <div class='question bold'>Why should people collaborate on the net?</div>
+<!-- contact -->
+    <div id="contact_container" class="contact_container_sparito display_none">
+      <div class="exit" id="exit"></div>
+      <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
+      <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
+      <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
+    </div>
+
+<!-- spazio da navbar -->
+    <div class="pt-5">
+    </div>
+
+    <div class="row text-white mt-5">
+      <div class="col-12 text-center">
+        <div class="fs-1c mt-lg-0 my-3">
+          Izi photo mosaic </div>
+        </div>
+    </div>
+
+    <!-- img -->
+        <div class="row text-white mt-4 padding-row">
+          <div class="col-lg-6 col-12">
+            <img src="images/izi.png" class="works_img">
+          </div>
+          <div class="col-lg-6 col-12  mt-3 mt-lg-0">
+            <img src="images/izi1.png" class="works_img">
+          </div>
+        </div>
+
+    <div class="row text-white mt-5  padding-row">
+      <div class="col-md-6 col-12 px-3">
+        <div class="fs-3c mt-4" >
+          Common digital space  <br> that invites users to collaborate </div>
+      </div>
+      <div class="col-md-3 col-6 px-md-3">
+        <div  class="mt-4 pt-2 fs-6c">
+            My main role: </div>
+          <div  class="fs-6c  mt-2 fw-lighter opacity" >
+            UI / UX  designer<br>
+            Web programmer <br>
+            Visual designer
+          </div>
+      </div>
+      <div class="col-md-3 col-6 px-md-3">
+        <div  class="mt-4 pt-2 fs-6c">
+            Tools: </div>
+          <div  class="fs-6c  mt-2 fw-lighter opacity" >
+            HTMS, CSS<br>
+            P5 library <br>
+            Firebase
+          </div>
+      </div>
+    </div>
+
+<!-- intro -->
+    <div class="row text-white mt-5 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-2c mt-4" >
+          Why should people <br>collaborate on the net? </div>
+      </div>
+      <div class="col-lg-3 col-12 px-md-3">
+        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          Every day milion of people surf on the net.
+        The goal of this web experience is to make more people collaborate in a productive way.
         In the world there are a lot of fanbases that share their passion.
         Whenever a singer is about to release a music album, fans go to great lengths to find out something about it.
-        Here comes the idea to create a “photo mosaic”: an album cover created by many small images.
-        Fans have to send a picture of themselves to discover the album cover, because this picture will be one of the small images that will complete the album cover.
-        </div>
-      <div id="main-description-2" class='container-small margin_left'>
-        Team: <br>
-        - 4 students<br><br>
-        My main role:<br>
-        - UI/UX designer<br>
-        - Programmer<br>
-        - Visual designer<br><br>
-        Tools<br>
-        - HTML, CSS<br>
-        - P5 library <br>
-        - Firebase
+      </div>
+    </div>
+      <div class="col-lg-3 col-12 px-md-3">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          Here comes the idea to create a “photo mosaic”: an album cover created by many small images.
+          Fans have to send a picture of themselves to discover the album cover, because this picture will be one of the small images that will complete the album cover.
+          </div>
       </div>
     </div>
 
-    <div id="main-images" class="container">
-      <img src="images/izi.png" class="img">
-      <img src="images/izi1.png" class="img margin_left">
-    </div>
+    <!-- img -->
+        <div class="row text-white mt-5 padding-row">
+          <div class="col-lg-6 col-12">
+            <img src="images/izi6.png" class="works_img">
+          </div>
+          <div class="col-lg-6 col-12  mt-3 mt-lg-0">
+            <img src="images/izi7.png" class="works_img">
+          </div>
+        </div>
 
-    <div id="secondary-description" class="container process bold margin_top">
-      The process
-    </div>
 
-    <div id="secondary-description" class="container">
-      <div id="main-description-1" class='container-small'>
-        <div class='width'>
-        <a class='bold'>1. Define the user journey and tools</a> <br>
+
+
+<!-- 1 -->
+    <div class="row text-white mt-5 pt-4 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-3c mt-4" >
+          1. Define the user journey and tools </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-4 pt-2 fs-6c fw-lighter">
         The goal was to create a simple and intuitive web experience, so we designed only 3 pages, one with instructions, one where people can take the picture and one with the mosaic.
-        We also defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
-        <br><br></div>
-      </div>
-      <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/izi_user.png" class="img_long">
-      </div>
-    </div>
-
-    <div id="secondary-description" class="container">
-      <div id="main-description-1" class='container-small'>
-        <div class='width'>
-        <a class='bold'>2. Define the graphics</a> <br>
-        We decided to use a simple graphic that remebers the singer’s style. We wanted to enhance the mosaic.<br><br><br><br><br>
         </div>
       </div>
-      <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/izi2.png" class="img">
-        <img src="images/izi3.png" class="img">
-      </div>
-    </div>
-
-    <div id="secondary-description" class="container">
-      <div id="main-description-1" class='container-small'>
-        <div class='width'>
-        <a class='bold'>3. Create the algorithm</a> <br>
-        We use the P5 library to code this project. It wasn’t easy to create the algorithm hat would allow the creation of the mosaic, infact we did a lot of tests.
-  At the end we created an algorithm that inserts the user picture in the position where there is the highest brightness affinity.<br><br>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          We also defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
         </div>
-      </div>
-      <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/izi4.png" class="img">
-        <img src="images/izi5.png" class="img">
-      </div>
+    </div>
     </div>
 
-    <div id="secondary-description" class="container">
-      <div id="main-description-1" class='container-small'>
-        <div class='width'>
-      <a class='bold'>  4. Try it!</a><br>
-        We publish the website but the majority of picture were made by ourselves. Only a small group of people tried it, everyone was impressed by the result: the mosaic was very similar to the album cover.
-         <a class="link" target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/">Try it yourself!</a>
-        <br><br><br>
+<!-- 2 -->
+    <div class="row text-white mt-5 pt-0 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-3c mt-4" >
+          2. Define the UI </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+        We decided to use a simple graphic that remebers the singer’s style. We wanted to enhance the mosaic.
+      </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
         </div>
-      </div>
-      <div id="main-description-2" class='container-small margin_left'>
-        <img src="images/izi6.png" class="img">
-        <img src="images/izi7.png" class="img">
-      </div>
+    </div>
     </div>
 
+<!-- img -->
+<div class="row text-white mt-5 pt-5 padding-row">
+  <div class="col-lg-9 col-12">
+    <img src="images/izi_user.png" class="works_img">
   </div>
-
-
-
 </div>
 
+    <div class="row text-white mt-3 padding-row">
+      <div class="col-lg-6 col-12">
+        <img src="images/izi2.png" class="works_img">
+      </div>
+      <div class="col-lg-6 col-12  mt-3 mt-lg-0">
+        <img src="images/izi5.png" class="works_img">
+      </div>
+    </div>
 
 
-</body>
+<!-- 3 -->
+    <div class="row text-white mt-5 pt-4 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-3c mt-4" >
+          3. Create the algorithm</div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          We use the P5 library to code this project. It wasn’t easy to create the algorithm hat would allow the creation of the mosaic, infact we did a lot of tests.
+      </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          At the end we created an algorithm that inserts the user picture in the position where there is the highest brightness affinity.
+        </div>
+    </div>
+    </div>
+
+<!-- 4 -->
+    <div class="row text-white mt-5 pt-0 mb-5 pb-5 padding-row">
+      <div class="col-lg-6 col-12">
+        <div class="fs-3c mt-4" >
+          4. Try it! </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          We publish the website but the majority of picture were made by ourselves. Only a small group of people tried it, everyone was impressed by the result: the mosaic was very similar to the album cover.
+         <a class="text-white hover_green text-decoration-underline" target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/">Try it yourself! </a>
+      </div>
+      </div>
+      <div class="col-lg-3 col-12 px-lg-3">
+        <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+        </div>
+    </div>
+    </div>
 
 
-</html>
+<!-- other projects -->
+<div class="row text-white mt-5 pt-0 padding-row">
+  <div class="col-12">
+    <div class="fs-2c mt-4" >
+    Other projects </div>
+  </div>
+</div>
+
+<hr class="bg-white mb-0 mt-lg-5 mt-3" style="opacity:1; height:1.5px"/>
+
+<!-- easydream -->
+<div class="row text-white py-4 padding-row work" id="easydream" onclick="changePage(this)">
+  <div class="col-lg-6 col-12">
+    <div class="fs-3c" >
+    Easydream </div>
+    <div class="fs-6c  fw-lighter" >
+  A new way to inspire people to choose their next travel destination  </div>
+  </div>
+  <div class="col-lg-6 col-12 d-flex align-items-center">
+    <div class="fs-6c opacity fw-lighter mt-lg-0 mt-2" >
+      User research -
+      UX-UI design -
+      Prototyping
+  </div>
+</div>
+</div>
+
+<hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+<!-- animus -->
+<div class="row text-white py-4 padding-row work" id="animus" onclick="changePage(this)">
+  <div class="col-lg-6 col-12">
+    <div class="fs-3c" >
+    PoliMi app redesign + Animus </div>
+    <div class="fs-6c  fw-lighter" >
+    A new smart way of managing university rooms  </div>
+  </div>
+  <div class="col-lg-6 col-12 d-flex align-items-center">
+    <div class="fs-6c opacity fw-lighter mt-lg-0 mt-2" >
+      User research -
+      UI-UX design -
+      User testing -
+      Prototyping
+  </div>
+</div>
+</div>
+
+<hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+<!-- deposito -->
+<div class="row text-white py-4 padding-row work" id="deposito" onclick="changePage(this)">
+  <div class="col-lg-6 col-12">
+    <div class="fs-3c" >
+    Deposito Cinerario Italiano </div>
+    <div class="fs-6c  fw-lighter" >
+    Communicative machine speculating on death  </div>
+  </div>
+  <div class="col-lg-6 col-12 d-flex align-items-center">
+    <div class="fs-6c opacity fw-lighter mt-lg-0 mt-2" >
+      Digital interaction -
+      UI / UX -
+      Web programming -
+      Space design
+  </div>
+</div>
+</div>
+
+<hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+<!-- izi -->
+<div class="row text-white py-4 padding-row work d-none" id="izi" onclick="changePage(this)">
+  <div class="col-lg-6 col-12">
+    <div class="fs-3c" >
+    Izi photo mosaic </div>
+    <div class="fs-6c  fw-lighter" >
+    Common digital space that invites users to collaborate  </div>
+  </div>
+  <div class="col-lg-6 col-12 d-flex align-items-center">
+    <div class="fs-6c opacity fw-lighter mt-lg-0 mt-2" >
+      Digital interaction -
+      UI / UX -
+      Web programming
+  </div>
+</div>
+</div>
+
+<hr class="bg-white my-0 d-none" style="opacity:1; height:1.5px"/>
+
+<!-- music jukebox -->
+<div class="row text-white py-4 padding-row work" id="jukebox" onclick="changePage(this)">
+  <div class="col-lg-6 col-12">
+    <div class="fs-3c" >
+    Memory jukebox </div>
+    <div class="fs-6c  fw-lighter" >
+    Interactive music toy to prevent senile dementia  </div>
+  </div>
+  <div class="col-lg-6 col-12 d-flex align-items-center">
+    <div class="fs-6c opacity fw-lighter mt-lg-0 mt-2" >
+      Prototyping -
+      UX -
+      User research -
+      C++ programing
+  </div>
+</div>
+</div>
+
+<hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+
+
+
+
+
+  </body>
+
+
+
+  </html>
